# divvy-analysis

./: .gitignore  README.md  app.py  basic-EDA.ipynb  build_database.py  pyproject.toml  routes.ipynb
data/: datasets.json
src/: directories.py  graph.py  logic.py  rides.py  utils.py
src/database/: __init__.py  sql.py
src/divvy/: __init__.py  build_database.py  data_processing.py  download.py
