[tool.poetry]
name = "divvy-analysis"
version = "0.1.0"
description = ""
authors = ["Joe Gambino <joe@gam.bingo>"]
readme = "README.md"
packages = [{include = "divvy_analysis"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.0"
streamlit = "^1.31.0"
routingpy = "^1.3.0"
osmnx = "^1.9.1"
matplotlib = "^3.8.2"
scikit-learn = "^1.4.0"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.0.12"
ipykernel = "^6.29.0"
watchdog = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
